updates with main folder

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
     <main id="main-content" role="main">
         <nav class="navigation-container" role="navigation" aria-label="Novel sections">
-            <a href="prologue.html" class="nav-button" aria-label="Read the Prologue">Prologue</a>
-            <a href="chapter1.html" class="nav-button" aria-label="Read Chapter 1: The Awakening">Chapter 1</a>
-            <a href="chapter2.html" class="nav-button" aria-label="Read Chapter 2: Secrets Revealed">Chapter 2</a>
+            <a href="main/prologue.html" class="nav-button" aria-label="Read the Prologue">Prologue</a>
+            <a href="main/chapter1.html" class="nav-button" aria-label="Read Chapter 1: The Awakening">Chapter 1</a>
+            <a href="main/chapter2.html" class="nav-button" aria-label="Read Chapter 2: Secrets Revealed">Chapter 2</a>
         </nav>
     </main>
     
