--- a/main/prologue.html
+++ b/main/prologue.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Prologue - Interactive Novel">
     <title>Prologue - Interactive Novel</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/main.js" defer></script>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -87,8 +87,8 @@
         
         <nav class="content-container" role="navigation" aria-label="Chapter navigation">
             <div class="navigation-buttons">
-                <a href="index.html" class="nav-button disabled" aria-label="Previous chapter" aria-disabled="true">← Previous</a>
-                <a href="index.html" class="nav-button" aria-label="Return to table of contents">📖 Index</a>
+                <a href="../index.html" class="nav-button disabled" aria-label="Previous chapter" aria-disabled="true">← Previous</a>
+                <a href="../index.html" class="nav-button" aria-label="Return to table of contents">📖 Index</a>
                 <a href="chapter1.html" class="nav-button" aria-label="Next chapter">Next →</a>
             </div>
         </nav>
